2011-08-19 17:41  rsbivand

	* DESCRIPTION, R/as.points.S, R/inout.S, R/inpip.S: coercion to
	  two-column matrix points in inout()

2011-08-17 10:45  rsbivand

	* ChangeLog, inst/ChangeLog: adding NAMESPACE, .onLoad()

2011-08-17 10:41  rsbivand

	* DESCRIPTION, INDEX, NAMESPACE, R/First.lib.S, R/spkernel2d.R,
	  data/00Index, data/bodmin.rda, data/cardiff.rda,
	  data/okblack.rda, data/okwhite.rda, data/southlancs.rda,
	  data/uganda.rda, man/kernel2d.Rd: adding NAMESPACE, .onLoad()

2011-02-22 16:24  rsbivand

	* oChangeLog, svn2cl.xsl: tidy

2011-02-22 16:18  rsbivand

	* .: tidy

2011-02-12 11:33  rsbivand

	* clearup after sourceforge outage

2010-08-28 15:33  rsbivand

	* as.double to storage.mode

2010-06-17 14:40  rsbivand

	* bboxx docs

2009-10-09 19:06  rsbivand

	* stmctest modifications

2009-09-17 07:36  rsbivand

	* fix licence

2008-01-30 16:30  rsbivand

	* grd in spkernel2d

2007-09-04 12:55  rsbivand

	* Changelog

2007-08-23 07:37  rsbivand

	* n2dist docs

2007-04-23 04:48  rsbivand

	* wrong polygon on khat

2007-03-30 05:05  rsbivand

	* tidy

2007-03-29 14:34  rsbivand

	* disambiguate rlabel and shift

2006-09-22 14:14  rsbivand

	* bounds.h

2006-09-21 19:46  rsbivand

	* R 2.4.0

2006-04-11 18:27  rsbivand

	* spkernel2d and bboxx

2006-04-10 19:16  rsbivand

	* spkernel2d and bboxx

2005-04-11 18:14  rsbivand

	* e40 to d40

2004-11-01 17:54  rsb

	* pre lancs

2003-10-28 18:26  rsb

	* over 10

2002-07-30 16:28  rsb

	* PACKAGE

2002-07-29 18:23  rsb

	* cleanup

2002-07-29 18:09  rsb

	* to rda

2002-07-29 17:48  rsb

	* rest

2002-07-29 13:08  rsb

	* Licence and T/F

2002-07-29 11:37  rsb

	* added inst

2002-02-13 14:52  rsb

	* tribble bug

2002-01-24 13:44  rsb

	* data to rda

2002-01-16 17:49  rsb

	* count as integer

2001-12-11 13:02  rsb

	* 1.4.0 fixes

2001-06-18 09:48  rsb

	* raised inc

2001-06-18 09:36  rsb

	* raised inc

2001-06-18 08:49  rsb

	* raised inc

2001-06-17 13:13  rsb

	* undoc

2001-06-17 13:03  rsb
